update client and service and fix model